--- a/shopinfo.html
+++ b/shopinfo.html
@@ -162,7 +162,7 @@
                         <div id="googlemap-area">
                             <div class="access">アクセス</div>
                                 <div class="map">
-                                <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyA2TetCGV0DPioXrWVn-XURDyY-WIi2txs"></script>
+                                <script src="//maps.googleapis.com/maps/</script>
                                 <script type="text/javascript">
                                 function googleMap() {
                                 var latlng = new google.maps.LatLng(35.171348,136.904655);/* 座標 */
